--- a/expense-tracker-app/package.json
+++ b/expense-tracker-app/package.json
@@ -15,12 +15,12 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "element-ui": ">2.15.9 || 2.15.8",
+    "vite": "^3.0.1",
+    "vite-plugin-vue2": "^2.0.2",
     "vue": "^2.7.7",
     "vue-chartjs": "^4.1.1",
     "vue-router": "^3.5.4",
-    "vuex": "^3.6.2",
-    "vite": "^3.0.1",
-    "vite-plugin-vue2": "^2.0.2"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/eslint-config-prettier": "^7.0.0",
