--- a/expense-tracker-app/.eslintrc.json
+++ b/expense-tracker-app/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "env": {
-    "es2021": true
+    "es2021": true,
+    "jest": true
+  },
+  "globals": {
+    "vi": "readonly"
   },
   "parserOptions": {
     "sourceType": "module"
