--- a/expense-tracker-app/package.json
+++ b/expense-tracker-app/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test:cov": "echo \"Error: no test:cov specified\" && exit 1"
+    "test": "vitest",
+    "test:cov": "vitest run --coverage"
   },
   "author": "Marcin Brzeziński",
   "license": "MIT",
@@ -23,11 +23,17 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.16.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/test-utils": "^1.3.0",
+    "c8": "^7.12.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-vue": "^9.1.1",
+    "jest-serializer-vue": "^2.0.2",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
-    "sass": "^1.53.0"
+    "sass": "^1.53.0",
+    "vitest": "^0.18.1"
   }
 }
